@@ -27,10 +27,21 @@ if(enable-qt)
 	if(enable-qt5)
 		include(../cmake-qt5.txt)
 		target_link_libraries(mgl_qt_example mgl-qt5)
+		qt5_wrap_cpp(qgl_moc_src qgl_example.h )
 	else(enable-qt5)
 		include(../cmake-qt4.txt)
 		target_link_libraries(mgl_qt_example mgl-qt4)
+		qt4_wrap_cpp(qgl_moc_src qgl_example.h )
 	endif(enable-qt5)
+	add_executable(mgl_qgl_example wnd_samples.cpp qgl_example.cpp ${qgl_moc_src} ${MGL_MOC_EX_FILES})
+	if(enable-qt5)
+		target_link_libraries(mgl_qgl_example mgl)
+		qt5_use_modules(mgl_qgl_example Core Widgets Gui OpenGL)
+	else(enable-qt5)
+		target_link_libraries(mgl_qgl_example mgl)
+		target_link_libraries(mgl_qgl_example ${QT_LIBRARIES})
+	endif(enable-qt5)
+
 endif(enable-qt)
 
 if(MGL_HAVE_LTDL)
